fix: buttons not properly aligned

--- a/src/extensionsIntegrated/Phoenix-live-preview/live-preview.css
+++ b/src/extensionsIntegrated/Phoenix-live-preview/live-preview.css
@@ -54,18 +54,18 @@
 }
 
 .open-icon {
-    background: url("./images/sprites.svg#open-icon") center no-repeat;
+    background: url("./images/sprites.svg#open-icon") no-repeat 72.5%;
     width: 30px;
     margin-left: 4px;
 }
 
 .pin-icon {
-    background: url("./images/sprites.svg#pinned-icon") center no-repeat;
+    background: url("./images/sprites.svg#pinned-icon") no-repeat 72.5%;
     width: 30px;
 }
 
 .unpin-icon {
-    background: url("./images/sprites.svg#unpinned-icon") center no-repeat;
+    background: url("./images/sprites.svg#unpinned-icon") no-repeat 72.5%;
     width: 30px;
 }
 
@@ -80,6 +80,7 @@
     opacity: 1;
     visibility: visible;
     transition: unset;
+    padding-left: 7.5px;
 }
 
 .live-preview-settings input.error, .live-preview-settings input:focus.error{
@@ -95,13 +96,14 @@
     align-items: center;
     visibility: hidden;
     transition: opacity 1s, visibility 0s linear 1s; /* Fade-out effect */
+    padding-left: 7.5px;
 }
 
 #livePreviewModeBtn {
     min-width: fit-content;
     display: flex;
     align-items: center;
-    margin: 2px 4px 0 3px;
+    margin: 3px 4px 0 3px;
     max-width: 80%;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -139,7 +141,7 @@
 #previewModeLivePreviewButton {
     color: #a0a0a0;
     margin-left: 3px;
-    margin-top: 3.5px;
+    margin-top: 3.3px;
     width: 30px;
     height: 22px;
     flex-shrink: 0;
